[[bin]]
name = "sonar_sweep"
path = "src/sonar_sweep/main.rs"

[[bin]]
name = "dive"
path = "src/dive/main.rs"

[[bin]]
name = "binary_diagnostic"
path = "src/binary_diagnostic/main.rs"

[[bin]]
name = "giant_squid"
path = "src/giant_squid/main.rs"

[[bin]]
name = "hydrothermal_venture"
path = "src/hydrothermal_venture/main.rs"

[package]
name = "advent_2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
